--- a/Wine Quality/Wine-Quality.ipynb
+++ b/Wine Quality/Wine-Quality.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5842e842",
+   "id": "e504065c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d5e313a0",
+   "id": "b8098f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3ceefdda",
+   "id": "0d397abf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4ffcdd78",
+   "id": "d45a1d0a",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a26077ed",
+   "id": "b79ec893",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9f72aa2f",
+   "id": "1b6377a2",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f424b8bb",
+   "id": "42bec41c",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4a0f77e7",
+   "id": "10c0b2ba",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7a0b1f41",
+   "id": "4a2c3c7d",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "39b1629d",
+   "id": "ab938983",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "16f7d507",
+   "id": "b7b79caf",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b58178c4",
+   "id": "879399f2",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ebf88e31",
+   "id": "54614da4",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dadd501c",
+   "id": "0302b3c6",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "133f5430",
+   "id": "091e7d9d",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b5066616",
+   "id": "52536115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c2037821",
+   "id": "7484ac8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ee9ae907",
+   "id": "84c36aab",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "53edc8e3",
+   "id": "eb56db58",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "616c2ff0",
+   "id": "a6bb9433",
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2c33ad61",
+   "id": "9c7b07b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "090ffc54",
+   "id": "cf211480",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "31dd9515",
+   "id": "483fbd51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "11b36b03",
+   "id": "c7c7ea69",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "d29b6768",
+   "id": "c7074a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "942a88a1",
+   "id": "1d958149",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "bcbb99ff",
+   "id": "44dbaec4",
    "metadata": {},
    "outputs": [
     {
@@ -800,8 +800,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "b8cfef63",
+   "execution_count": 99,
+   "id": "d2c55e3d",
    "metadata": {},
    "outputs": [
     {
@@ -810,20 +810,107 @@
        "0.911675688976378"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rfc_eval = cross_val_score(estimator = rfc, X = X_train, y = y_train, cv = 10)\n",
+    "rfc_eval.mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "d7c7dcdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.4516129 , 0.46153846, 0.64285714, 0.75862069, 0.59259259,\n",
+       "       0.5       , 0.56      , 0.68965517, 0.56      , 0.8125    ])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc_eval = cross_val_score(estimator = rfc, X = X_train, y = y_train,scoring=\"f1\", cv = 10)\n",
+    "rfc_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "1ecc8e1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8125"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc_eval.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e6041098",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6029376962282968"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc_eval.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "b2830aa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7834435009435009"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc_eval = cross_val_score(estimator = rfc, X = X_train, y = y_train,scoring=\"precision\", cv = 10)\n",
     "rfc_eval.mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e61f837",
+   "id": "81aa71e3",
    "metadata": {},
    "outputs": [],
    "source": []
